# siphash-cpp

./: AGENTS.md  CMakeLists.txt  README.md  TODO.md  vcpkg.json
.github/workflows/: CI-Linux.yml
cmake/: siphash-hpp-config.cmake.in  siphash_cpp-config.cmake.in
code-blocks/examples/: examples.cbp  main.cpp
examples/: basic.cpp
include/siphash-hpp/: siphash.hpp
include/siphash_cpp/: siphash.hpp
scripts/: run_tests.sh
tests/: siphash_tests.cpp
